# GOP-1

./: CMakeLists.txt  InternalAPI.MD  README.md  Util.cpp  Util.h  main.cpp  util.cpp  util.h
Binary/: GOP  README.md
Deck/: Card.cpp  Card.h  Deck.cpp  Deck.h  Effects.cpp  Effects.h
Dice/: Dice.cpp  Dice.h  dice.cpp  dice.h
First step with TF/: first_steps_with_tensor_flow.ipynb
Game/: Game.cpp  Game.h  game.cpp  game.h
Map/: Map.cpp  Map.h
Player/: InitPlayers.cpp  InitPlayers.h  Player.cpp  Player.h  initPlayers.cpp  initPlayers.h  numPlayers.cpp  numPlayers.h  player.cpp  player.h
Utils/: Colors.h  Effects.cpp  Effects.h  Util.cpp  Util.h  colors.h
